add Planet as worldspace canvas ui, added on click on planet to show planet details panel

--- a/Vincent/Vincent.csproj
+++ b/Vincent/Vincent.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <Compile Include="Assets\BillBoard.cs" />
     <Compile Include="Assets\FirstPersonCam.cs" />
+    <Compile Include="Assets\InfoCanvasScript.cs" />
     <Compile Include="Assets\LookAtObj.cs" />
     <Compile Include="Assets\ReverseNormals.cs" />
   </ItemGroup>
