--- a/Vincent/Vincent.csproj
+++ b/Vincent/Vincent.csproj
@@ -82,12 +82,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\BillBoard.cs" />
+    <Compile Include="Assets\CSVReader.cs" />
     <Compile Include="Assets\FirstPersonCam.cs" />
     <Compile Include="Assets\InfoCanvasScript.cs" />
+    <Compile Include="Assets\InstantiateStars.cs" />
     <Compile Include="Assets\LookAtObj.cs" />
+    <Compile Include="Assets\ReadDemo.cs" />
     <Compile Include="Assets\ReverseNormals.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\ExampleCSV.txt" />
     <None Include="Assets\Standard Assets\Cameras\CameraGuidelines.txt" />
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
   </ItemGroup>
