--- a/Vincent/Vincent.csproj
+++ b/Vincent/Vincent.csproj
@@ -84,9 +84,11 @@
     <Compile Include="Assets\BillBoard.cs" />
     <Compile Include="Assets\CSVReader.cs" />
     <Compile Include="Assets\FirstPersonCam.cs" />
+    <Compile Include="Assets\GyroCamera.cs" />
     <Compile Include="Assets\InfoCanvasScript.cs" />
     <Compile Include="Assets\InstantiateStars.cs" />
     <Compile Include="Assets\LookAtObj.cs" />
+    <Compile Include="Assets\PinchZoom.cs" />
     <Compile Include="Assets\ReadDemo.cs" />
     <Compile Include="Assets\ReverseNormals.cs" />
   </ItemGroup>
