Added button to switch between starmap and constellation mode

--- a/Vincent/Vincent.csproj
+++ b/Vincent/Vincent.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Assets\PinchZoom.cs" />
     <Compile Include="Assets\ReadDemo.cs" />
     <Compile Include="Assets\ReverseNormals.cs" />
+    <Compile Include="Assets\SwitchBGmode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\ExampleCSV.txt" />
