--- a/Vincent/Vincent.csproj
+++ b/Vincent/Vincent.csproj
@@ -52,6 +52,9 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Advertisements">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
@@ -66,6 +69,9 @@
     </Reference>
     <Reference Include="UnityEngine.HoloLens">
       <HintPath>Library\UnityAssemblies\UnityEngine.HoloLens.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.Purchasing">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.VR">
       <HintPath>Library\UnityAssemblies\UnityEngine.VR.dll</HintPath>
@@ -92,9 +98,12 @@
     <Compile Include="Assets\LookAtObj.cs" />
     <Compile Include="Assets\Octahedron Sphere\OctahedronSphereCreator.cs" />
     <Compile Include="Assets\Octahedron Sphere\OctahedronSphereTester.cs" />
+    <Compile Include="Assets\OpenURL.cs" />
     <Compile Include="Assets\PinchZoom.cs" />
     <Compile Include="Assets\ReadDemo.cs" />
     <Compile Include="Assets\ReverseNormals.cs" />
+    <Compile Include="Assets\SolarSystemCalculations.cs" />
+    <Compile Include="Assets\Starnames.cs" />
     <Compile Include="Assets\SwitchBGmode.cs" />
   </ItemGroup>
   <ItemGroup>
