Proper constellation lines drawn

--- a/Vincent/Vincent.csproj
+++ b/Vincent/Vincent.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Assets\CurrPosition.cs" />
     <Compile Include="Assets\DeactivateForBtn.cs" />
     <Compile Include="Assets\DrawCircle.cs" />
+    <Compile Include="Assets\DrawConstellations.cs" />
     <Compile Include="Assets\FirstPersonCam.cs" />
     <Compile Include="Assets\GyroCamera.cs" />
     <Compile Include="Assets\InfoCanvasScript.cs" />
