--- a/Vincent/Vincent.csproj
+++ b/Vincent/Vincent.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Assets\InfoCanvasScript.cs" />
     <Compile Include="Assets\InstantiateSphereGrid.cs" />
     <Compile Include="Assets\InstantiateStars.cs" />
+    <Compile Include="Assets\LocationCalibration.cs" />
     <Compile Include="Assets\LocationDropdown.cs" />
     <Compile Include="Assets\LookAtObj.cs" />
     <Compile Include="Assets\Octahedron Sphere\OctahedronSphereCreator.cs" />
